<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/catalogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/catalog_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catalogRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/catalogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvEmptyCatalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_catalog"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/catalogTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/catalog_add_item"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/bg"
        android:backgroundTint="@color/brand_primary"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
